# lablog

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GROK.md  README.es.md  README.md  SECURITY.md  bugs.md  findings.md  lablog-production-plan.md  lablog.spec  progress.md  pyproject.toml  task_plan.md
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: ARCHITECTURE_MASTER_PLAN.md  DESIGN.md  IMPLEMENTATION_PLAN.md  LATEX_PREVIEW.md  PRODUCTION_MASTER_PLAN.md  QUALITY_CHECKPOINT.md  QUICKSTART.md  RELEASE.md  release-notes-v0.1.0.md  release-notes-v0.3.0-DRAFT.md  release-notes-v0.3.0.md  release-notes-v0.3.1.md
docs/future-features/: README.md  circuitikz-jupyter-simulation.md  diagram-catalog.md  diagram-presets-and-parameters.md  pgplots-and-live-data.md
docs/future-features/examples/: rc_series_charge.preset.json
docs/plans/: 2026-07-07-acto-ii-backend-headless.md
docs/superpowers/plans/: 2026-06-29-pdf-compilation.md  2026-07-01-time-travel.md  2026-07-02-full-latex-mode.md
docs/superpowers/specs/: 2026-06-29-pdf-compilation-design.md  2026-07-01-time-travel-design.md  2026-07-02-full-latex-mode-design.md
packaging/: desktop_entry.py
prototypes/voice_to_latex/: README.md  demo_text.py  intent_parser.py  latex_translator.py  record.py  transcribe.py  voice_to_latex.py  voice_to_page.py
scripts/: build_demo_site.py  capture_ui_screenshots.mjs  package_desktop.sh  smoke_install.sh
src/lablog/: __init__.py  api.py  ast_nodes.py  cli.py  code_engine.py  commands.py  completions.py  config.py  desktop.py  event_store.py  events.py  exporter.py  latex_ast.py  latex_symbols.py  pdf_engine.py  projections.py  projector.py  snippets.py  templates.py  vault.py
src/lablog/diagrams/: __init__.py  catalog.py  expand.py  models.py  pyspice_sim.py
src/lablog/voice/: __init__.py  audio.py  parser.py
src/lablog/voice/engines/: __init__.py  base.py  registry.py  vosk_engine.py  whisper.py
tests/: test_api.py  test_api_vault.py  test_ast_nodes.py  test_code_engine.py  test_commands.py  test_desktop.py  test_diagrams.py  test_event_store.py  test_events.py  test_exporter_security.py  test_latex_ast.py  test_latex_fixtures.py  test_latex_symbols.py  test_pdf_engine.py  test_prod_hardening.py  test_projector.py  test_snippets.py  test_templates_completions.py  test_vault.py  test_voice_parser.py  test_voice_stt.py
tests/fixtures/latex/: 01_characters.tex  02_tables.tex  03_matrices.tex  04_feynman.tex  05_physics_packages.tex  06_full_document.tex
ui/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts
ui/e2e/: smoke.spec.ts
ui/src/: App.tsx  index.css
ui/src/components/: error-boundary.tsx
ui/src/components/editor/: latex-editor.test.tsx  latex-editor.tsx
ui/src/components/history/: time-travel.tsx
ui/src/components/lab/: lab-canvas.test.tsx  lab-canvas.tsx
ui/src/components/panels/: cells-panel.test.tsx  cells-panel.tsx  diagrams-panel.tsx  parameters-panel.tsx  snippets-panel.tsx  symbols-panel.tsx  tutorials-panel.tsx  vault-panel.tsx
ui/src/components/preview/: latex-preview.tsx
ui/src/components/shell/: app-shell.tsx  command-palette.tsx  export-menu.tsx  settings-dialog.tsx  sidebar.tsx  templates-menu.tsx  theme-toggle.tsx  toolbar.test.tsx  toolbar.tsx  welcome-dialog.tsx
ui/src/hooks/: use-dictation.ts  use-global-shortcuts.ts  use-page-update.ts  use-speech.test.ts  use-speech.ts
ui/src/lib/: api-fetch.test.ts  api.ts  ast-render-split.test.ts  ast-render.tsx  diff.ts  katex-config.ts  latex-completions.ts  latex-parser.test.ts  latex-parser.ts  latex-render.test.ts  latex-render.ts  latex-templates.ts  shortcuts.test.ts  shortcuts.ts  string-utils.ts  utils.test.ts
ui/src/lib/voice/: index.ts  record-wav.test.ts  record-wav.ts  types.ts
ui/src/stores/: app-store.ts
ui/src/test/: setup.ts
ui/src/types/: index.ts
