[project]
name = "jose-labarca-lablog"
version = "0.3.1"
description = "Segundo cerebro científico con LaTeX en vivo, voz y bóveda segura."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "José Labarca Baeza" }
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "jupyter-client>=8.6",
    "ipykernel>=6.29",
    "matplotlib>=3.9",
    "Pillow>=10.4",
    "numpy>=1.26",
    "python-dotenv>=1.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
# App de escritorio portable: ventana nativa del SO (sin navegador).
desktop = [
    "pywebview>=5.0",
]
# Dictado offline con Whisper local (faster-whisper). El modelo se descarga
# la primera vez (~75–150 MB para "base"). sounddevice es opcional (CLI mic).
voice = [
    "faster-whisper>=1.0",
    "sounddevice>=0.5; platform_system != 'Emscripten'",
]
# Simulación SPICE vía PySpice (requiere ngspice en el sistema).
pyspice = [
    "PySpice>=1.5",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx2>=0.28",  # requerido por fastapi/starlette TestClient
    "ruff>=0.7",
    "mypy>=1.13",
    "bandit>=1.7",
    "pre-commit>=3.8",
]

[project.scripts]
lablog = "lablog.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
force-include = { "ui/dist" = "ui/dist" }

[tool.hatch.build.targets.wheel]
packages = ["src/lablog"]
force-include = { "ui/dist" = "lablog/static" }

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=lablog --cov-report=term-missing --cov-report=xml --cov-fail-under=80"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
files = ["src/lablog"]
exclude = ["prototypes", "tests", "ui", "dist"]

[dependency-groups]
dev = [
    "pytest-cov>=7.1.0",
]
